--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -3,7 +3,6 @@
   height: 20%;
 
   color: rgb(207, 207, 207);
-  font-size: 1.5em;
 
   font-family: "Exodus";
 }
@@ -103,4 +102,43 @@
 .footer p {
   margin: 3px;
   font-size: 0.75em;
+}
+
+@media screen and (orientation: portrait) {
+  .photo-wrap {
+    top: 37.5%;
+    height: 33.333vw;
+    width: 25vw;
+  }
+
+  .photo-wrap .left {
+    left: 15%;
+  }
+
+  .photo-wrap .right {
+    right: 15%;
+  }
+
+  .footer {
+    width: 100%;
+    top: 50%;
+  }
+
+  .footer.reception {
+    display: none;
+  }
+
+  .footer.ceremony {
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .countdown tr:nth-child(1) {
+    font-size: 3em;
+  }
+  
+  .countdown tr:nth-child(2) {
+    font-size: 1.5em;
+  }
 }
