--- a/src/css/index.css
+++ b/src/css/index.css
@@ -75,6 +75,13 @@
   src: local('Westfalia'), url('../fonts/Westfalia.otf') format('opentype');
 }
 
+@font-face {
+  font-family: 'Beau';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Beau'), url('../fonts/beau.ttf') format('truetype');
+}
+
 html {
   margin: 0;
   width: 100%;
@@ -93,7 +100,6 @@ body {
   background-size:auto,cover;
   background-position:top left, center;
   background-attachment:scroll,fixed;
-
 }
 
 ul {
@@ -104,4 +110,100 @@ ul {
 #root {
   width: 100%;
   height: 100%;
+}
+
+.animated-button {
+  position: relative;
+
+  display: inline-block;
+
+  color: blue;
+  border-bottom: 1px solid blue;
+  cursor: pointer;
+  overflow: hidden;
+  transition: color .2s ease-in-out, background-color .2s ease-in-out;
+}
+
+.animated-button:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+  height: 100%;
+  width: 1px;
+
+  background: blue;
+  transform: translateY(100%);
+  transition: transform .2s ease-in-out;
+  transition-delay: .2s * 3;
+}
+
+.animated-button span {
+  position: relative;
+
+  display: block;
+  padding: .5em;
+
+  color: inherit;
+}
+
+.animated-button span:before, 
+.animated-button span:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  background: blue;
+  transition: transform .2s ease-in-out;
+}
+
+.animated-button span:before {
+  height: 1px;
+  width: 100%;
+  
+  transform: translateX(100%);
+  transition-delay: .4s;
+}
+
+.animated-button span:after {
+  height: 100%;
+  width: 1px;
+
+  transform: translateY(-100%);
+  transition-delay: .2s;
+}
+
+.animated-button span:hover:before, 
+.animated-button span:hover:after {
+  transform: translate(0, 0);
+}
+
+.animated-button span:hover:after {
+  transition-delay: 0s;
+}
+
+.animated-button span:hover:before {
+  transition-delay: .2s;
+}
+
+.animated-button span:hover {
+  color: grey;
+  background-color: blue;
+  transition-delay: .6s;
+}
+
+.photo-wrap .image {
+  height: 100%;
+  width: 100%;
+
+  z-index: 1;
+
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.hidden {
+  display: none;
 }
