--- a/src/css/App.css
+++ b/src/css/App.css
@@ -51,7 +51,16 @@
 
   top: 1.5%;
   left: 5%;
+}
 
+.page-content .details-page-content,
+  .story-page-content,
+  .party-page-content,
+  .prayers-page-content,
+  .photos-page-content,
+  .registry-page-content,
+  .coming-soon-page-content
+  {
   border-radius: 5px;
   box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.50);
   background-color: rgba(0, 0, 0, 0.50);
@@ -60,13 +69,12 @@
 .page-content .scrollable-content {
   position: absolute;
 
-  height: 100%;
   width: 95%;
   left: 2.5%;
 
-  color: white;
+  color: rgba(255, 255, 255, .90);
 
-  font-family: 'Garamond';
+  font-family: 'Georgia';
 }
 
 .button-section {
@@ -75,6 +83,7 @@
   width: 100%;
   height: 25%;
 
+  margin-left: 13%;
   bottom: 5px;
 
   font-size: 1em;
@@ -82,7 +91,11 @@
 
 .button-section .button {
   position: relative;
-  display: inline-block;
+  float: left;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   width: 10%;
   height: 100%;
@@ -94,8 +107,8 @@
   font-weight: 'bold';
   color: white;
 
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 0.25%;
+  margin-right: 0.25%;
 
   cursor: pointer;
 }
@@ -114,9 +127,6 @@
 
 .button .button-text {
   position: relative;
-  top: 25%;
-
-  text-align: center;
 }
 
 @media screen and (orientation: portrait) {
@@ -128,14 +138,9 @@
   .button-section {
     height: 20%;
     bottom: 15%;
+    margin-left: 1%;
 
     font-size: .75em;
-  }
-
-  .button-section .button {
-    width: 20%;
-    margin-left: 2px;
-    margin-right: 2px;
   }
 }
 
@@ -148,13 +153,24 @@
   .button-section {
     height: 35%;
     bottom: 15%;
+    margin-left: 2.5%;
 
     font-size: .8em;
   }
 
   .button-section .button {
-    width: 13%;
-    margin-left: 2px;
-    margin-right: 2px;
+    width: 12%;
+    margin-left: .1%;
+    margin-right: .1%;
+  }
+
+  .page-content {
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .button-section {
+    font-size: .6em;
   }
 }
