--- a/src/css/RsvpPage.css
+++ b/src/css/RsvpPage.css
@@ -1,21 +1,37 @@
 .rsvp-page-content {
   height: 100%;
   width: 100%;
-
-  font-family: "Christmas";
 }
 
-.rsvp-form {
+.rsvp-form, .rsvp-form-footer {
   width: 70%;
-
   display: inline-block;
+
+  margin-top: 15px;
+  padding: 20px;
+}
+
+.number-circle {
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  padding: 5px;
+  border: 1px solid white;
+  color: white;
+  text-align: center;
+  font: 12px Arial, sans-serif;
+}
+
+@media screen and (max-width: 1024px) {
+  .rsvp-form {
+    width: 100%;
+  }
 }
 
 .rsvp-form input {
   outline: 0;
   border: 0;
 
-  width: 100%;
   height: 2rem;
   border-bottom: 1px solid #888888;
   background-color: transparent;
@@ -28,14 +44,66 @@
   padding-top: .5em;
   margin-bottom: .5em; 
   height: 2em;
+
+  float: left;
 }
 
-.submit {
+.rsvp-form .rsvp-guest-input {
+  width: 90%;
+  height: 100%;
+}
+
+.rsvp-form .rsvp-guest-input input {
+  line-height: 2em;
+  border: 1px solid #888888;
+  border-radius: 5px;
+}
+
+.rsvp-guest-list .guest-table {
+  padding-top: 1em;
+  margin-left: 2.5%;
+  width: 95%;
+  border-top: 1px solid gray;
+}
+
+.rsvp-guest-list .guest-header {
+  width: 60%;
+  font-size: 1.75em;
+}
+
+.rsvp-guest-list .boolean-header {
+  font-size: 0.85em;
+  font-weight: bold;
+  text-align: left;
+
+  width: 12.5%;
+  overflow: visible;
+
+  transform: rotate(-30deg);
+
+  padding-bottom: 3em;
+}
+
+.rsvp-guest-list .header-row {
+  border-bottom: 1px solid gray;
+}
+
+.rsvp-guest-input .name {
+  width: 90%;
+  padding-left: 5%;
+}
+
+.rsvp-guest-input .boolean {
+  width: 1.25em;
+}
+
+.guest-table .guest-column {
+  width: 60%;
+}
+
+.rsvp-button {
   height: 3em;
   line-height: 3em;
-
-  margin-left: 42.5%;
-  margin-bottom: 2.5%;
   width: 15%;
 
   border-radius: 5px;
@@ -43,24 +111,60 @@
 
   cursor: pointer;
 
-  font-family: 'Foglihten';
+  display: table;
+  margin: 0 auto;
+  margin-bottom: 2.5%;
 }
 
-.submit:hover {
+.rsvp-button.next-button {
+  width: 10em;
+}
+
+.rsvp-button.add-button {
+  width: 17em;
+}
+
+.rsvp-button.continue-button {
+  width: 22em;
+  background-color: rgba(7, 0, 100, 0.5);
+}
+
+.rsvp-button.submit-button {
+  width: 15em;
+}
+
+.rsvp-button:hover {
   background: rgb(215, 215, 215);
   box-shadow: inset 0 0 10px black;
   color: black;
 }
 
+.rsvp-button.inactive {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.rsvp-button.inactive:hover {
+  background: rgb(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0;
+  color: white;
+  cursor: default;
+}
+
 .rsvp-submit-success {
   display: inline-block;
 
-  padding: 20px;
+  padding: 20px 25px 20px 25px;
 }
 
-.rsvp-form, .rsvp-submit-success {
+.rsvp-form, .rsvp-submit-success, .rsvp-form-footer {
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.1);
+}
+
+.note-text {
+  display: block;
+  width: 95%;
+  margin-left: 2.5%;
 }
 
 /* Customize the label (the container) */
